--- a/serverless.yml
+++ b/serverless.yml
@@ -5,7 +5,7 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs8.10
+  runtime: nodejs12.x
   region: us-east-1
   stage: dev
   environment: ${file(env.yml)}
